tests/baselines/reference/asyncArrowFunctionCapturesArguments_es6.errors.txt
tests/cases/conformance/async/es6/asyncArrowFunction/asyncArrowFunctionCapturesArguments_es6.ts(4,52): error TS2522: The 'arguments' object cannot be referenced in an async arrow function. Consider using a standard async function expression.


==== tests/cases/conformance/async/es6/asyncArrowFunction/asyncArrowFunctionCapturesArguments_es6.ts (1 errors) ====
    class C {
       method() {
          function other() {}
          var fn = async () => await other.apply(this, arguments);      
                                                       ~~~~~~~~~
!!! error TS2522: The 'arguments' object cannot be referenced in an async arrow function. Consider using a standard async function expression.
       }
    }
    